# mospoly-psychological-support

./: .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  INSTALL.md  Makefile  README.md  architecture_diagram.mmd  docker-compose.yml  pyproject.toml  run.bat  seed.py  swagger.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 00effe15d8c3_applicationmodelfix.py  0434ee780edc_assign_user_role_to_existing_users.py  23020d3e0038_make_email_required_and_delete_users_.py  320096c5bd22_implement_rbac_with_permissions_using_.py  32f8a463f0b5_create_news_table.py  4476813c6b2d_fix_users_roles_assigned_at_timezone.py  4c1a2b3d5e6f_add_article_permissions.py  50630bbac52f_newstatuses.py  511f738f16f7_add_scheduled_time_and_comment_to_.py  5f25611a860f_fix_appointment_status_enum.py  6090345cb216_separate_theparis_pk.py  62e8ab982071_add_cancel_reason_to_appointments.py  699807fe3788_appointment_delete_initials.py  772da19cfdce_seed_rbac_roles_and_permissions_data.py  848d0c33edfc_fix_appointments_datetime_columns_.py  8a7b6c5d4e3f_add_password_reset_tokens.py  9d6b1f2a3c4d_add_patient_name_to_appointments.py  add_applications_table.py  add_authorization_permissions.py  b2c3d4e5f6a7_applications_workflow_audit.py  c1d2e3f4a5b6_add_users_study_group.py  combined_rbac_improvements.py  d789ac864327_initial_migration.py  f1a2b3c4d5e6_add_articles_table.py
docs/: PROJECT_DOCUMENTATION.md  appointments-create-401-fix-report.md
docs/architecture/: architecture.md  architecture_diagram.mmd  database_erd.mmd
psychohelp/: main.py
psychohelp/config/: __init__.py  config.py  database.py  logging.py
psychohelp/constants/: __init__.py  rbac.py
psychohelp/dependencies/: __init__.py  auth.py
psychohelp/models/: __init__.py  application_audit_log.py  applications.py  appointments.py  articles.py  news.py  password_reset_tokens.py  permissions.py  psychologists.py  reviews.py  roles.py  therapists.py  users.py
psychohelp/repositories/: __init__.py  applications.py  appointments.py  articles.py  news.py  password_reset_tokens.py  reviews.py  (+3 more)
tests/: __init__.py  config_example.sh  conftest.py  test_applications_offer_lookup.py  test_appointments_auth.py  test_appointments_psychologist_lookup.py  test_articles.py  test_authorization.py  test_images.py  test_password_reset.py  test_rbac_permissions.py  test_reviews_auth.py  test_roles.py  test_roles_auth.py  test_therapists_auth.py  test_token_expiration.py  test_users.py  test_users_group_alias.py
(+51 files in other folders)
