[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psychological-help-website"
version = "0.1.0"
description = "Psychological help website"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy==2.0.35",
    "asyncpg==0.30.0",
    "passlib[bcrypt]",
    "pyjwt==2.9.0",
    "pydantic[email]>=2.0.0",
    "pydantic-extra-types",
    "phonenumbers",
    "httpx",
    "anyio",
    "greenlet",
    "bcrypt==4.3.0",
    "alembic>=1.14.1",
    "psycopg2-binary>=2.9.10",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.gui-scripts]
psychohelp = "psychohelp:main.main"

[tool.hatch.build.targets.wheel]
packages = [
    "psychohelp"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "module"
asyncio_mode = "auto"
